{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 32,
  "lineage": "3d1e47b4-6f8b-0fd1-fdcb-3ed3e12a2a55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sprints_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de6dccf818dede20",
            "association_id": "eipassoc-02086fc1df6a9675f",
            "domain": "vpc",
            "id": "eipalloc-0de6dccf818dede20",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0efd805162aa02fb3",
            "private_dns": "ip-10-0-0-251.ec2.internal",
            "private_ip": "10.0.0.251",
            "public_dns": "ec2-18-213-64-233.compute-1.amazonaws.com",
            "public_ip": "18.213.64.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003d3d03cfe1b0468",
            "arn": "arn:aws:ec2:us-east-1:269053166710:instance/i-07f1b5b11ff9d9801",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f1b5b11ff9d9801",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011dd4b39e7e3d854",
            "private_dns": "ip-10-0-0-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.204",
            "public_ip": "3.90.85.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045ca6ed570bcba37",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0214c13671514420f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01469a9ebdee551ae",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0214c13671514420f"
            ]
          },
          "dependencies": [
            "aws_security_group.sprints_sg",
            "aws_subnet.sprints_subnet",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003d3d03cfe1b0468",
            "arn": "arn:aws:ec2:us-east-1:269053166710:instance/i-0ad0c895119bc8659",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad0c895119bc8659",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d8c3a9b0216a2dc",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07aed14a38f6cefe2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0214c13671514420f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091e2a66daa2faba0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0214c13671514420f"
            ]
          },
          "dependencies": [
            "aws_security_group.sprints_sg",
            "aws_subnet.sprints_subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sprints_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:internet-gateway/igw-086cbf212df2fd31a",
            "id": "igw-086cbf212df2fd31a",
            "owner_id": "269053166710",
            "tags": {
              "Name": "sprints_ig"
            },
            "tags_all": {
              "Name": "sprints_ig"
            },
            "vpc_id": "vpc-0ad63b31da4140f03"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sprints_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de6dccf818dede20",
            "association_id": "eipassoc-02086fc1df6a9675f",
            "connectivity_type": "public",
            "id": "nat-001eac86170c1957d",
            "network_interface_id": "eni-0efd805162aa02fb3",
            "private_ip": "10.0.0.251",
            "public_ip": "18.213.64.233",
            "subnet_id": "subnet-01469a9ebdee551ae"
          },
          "dependencies": [
            "aws_eip.sprints_eip",
            "aws_subnet.sprints_subnet",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sprints_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:route-table/rtb-0be868841dcd6cd8a",
            "id": "rtb-0be868841dcd6cd8a",
            "owner_id": "269053166710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-001eac86170c1957d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad63b31da4140f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.sprints_ng",
            "aws_subnet.sprints_subnet",
            "aws_vpc.sprints_vpc",
            "aws_eip.sprints_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sprints_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:route-table/rtb-00b65807d723977d0",
            "id": "rtb-00b65807d723977d0",
            "owner_id": "269053166710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086cbf212df2fd31a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad63b31da4140f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sprints_ig",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sprints_rta_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f3837bfe6331913",
            "route_table_id": "rtb-0be868841dcd6cd8a",
            "subnet_id": "subnet-091e2a66daa2faba0"
          },
          "dependencies": [
            "aws_nat_gateway.sprints_ng",
            "aws_route_table.sprints_rt_private",
            "aws_subnet.sprints_subnet",
            "aws_vpc.sprints_vpc",
            "aws_eip.sprints_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sprints_rta_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5f6bcb6b8c2d9a1",
            "route_table_id": "rtb-00b65807d723977d0",
            "subnet_id": "subnet-01469a9ebdee551ae"
          },
          "dependencies": [
            "aws_internet_gateway.sprints_ig",
            "aws_route_table.sprints_rt_public",
            "aws_subnet.sprints_subnet",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sprints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:security-group/sg-0214c13671514420f",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0214c13671514420f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "269053166710",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sprints_sg"
            },
            "tags_all": {
              "Name": "Sprints_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad63b31da4140f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sprints_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:subnet/subnet-01469a9ebdee551ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01469a9ebdee551ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269053166710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_public_subnet"
            },
            "tags_all": {
              "Name": "sprints_public_subnet"
            },
            "vpc_id": "vpc-0ad63b31da4140f03"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:subnet/subnet-091e2a66daa2faba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091e2a66daa2faba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269053166710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_private_subnet"
            },
            "tags_all": {
              "Name": "sprints_private_subnet"
            },
            "vpc_id": "vpc-0ad63b31da4140f03"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sprints_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269053166710:vpc/vpc-0ad63b31da4140f03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01aebc0445658fbdd",
            "default_route_table_id": "rtb-0dd13a4e35333ccb5",
            "default_security_group_id": "sg-0b4d7f602450145be",
            "dhcp_options_id": "dopt-0cefdc5804d48e332",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad63b31da4140f03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd13a4e35333ccb5",
            "owner_id": "269053166710",
            "tags": {
              "Name": "sprints_vpc"
            },
            "tags_all": {
              "Name": "sprints_vpc"
            }
          }
        }
      ]
    }
  ]
}